welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:4: error: Boolean does not take parameters
	} else (talking == false ) { return false}
                                   ^