welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
	if (talking && ( hour < 7 ) || ( hour > 20)) {
		return true
	} else (talking == false ) { return false}
}
